# sales-team-ai-agents

./: .env.sample  .gitignore  Project_Outline.md  README.md  requirements.txt  setup_instructions.md
getting_automated_sales_ai_agent/: pyproject.toml
getting_automated_sales_ai_agent/inputs/: apollo-contacts-export-outline.csv
getting_automated_sales_ai_agent/src/getting_automated_sales_ai_agent/: crew.py  main.py
getting_automated_sales_ai_agent/src/getting_automated_sales_ai_agent/agents/: company_evaluator.py  customer_icp_agent.py  email_campaign_agent.py  individual_evaluator.py  offer_researcher_creator_agent.py  pain_point_agent.py  pain_point_analyst.py  pain_point_identification_agent.py  solutions_template_agent.py  technical_evaluator.py
getting_automated_sales_ai_agent/src/getting_automated_sales_ai_agent/config/: agents.yaml  business_profile.txt  config.yaml  config.yaml.template  crew.yaml  pricing.yaml  secrets.yaml
getting_automated_sales_ai_agent/src/getting_automated_sales_ai_agent/tools/: __init__.py  airtable_tool.py  company_data_tool.py  news_tool.py  openai_tool.py  perplexity_tool.py  proxycurl_tool.py  reddit_tool.py
getting_automated_sales_ai_agent/src/getting_automated_sales_ai_agent/utils/: business_profile.py  token_tracker.py
latest_ai_development/: README.md  pyproject.toml  report.md
latest_ai_development/src/latest_ai_development/: crew.py  main.py
latest_ai_development/src/latest_ai_development/agents/: customer_icp_agent.py  offer_researcher_creator_agent.py  pain_point_identification_agent.py  solutions_template_agent.py
latest_ai_development/src/latest_ai_development/config/: config.yaml  crew.yaml  tasks.yaml
latest_ai_development/src/latest_ai_development/tools/: airtable_tool.py  news_tool.py  (+4 more)
(+13 files in other folders)
