[project]
name = "getting_automated_sales_ai_agent"
version = "0.1.0"
description = "getting_automated_sales_ai_agent using crewAI"
authors = [{ name = "Hunter Sneed", email = "hunter@gettingautomated.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",  
    "tldextract",
    "beautifulsoup4",
    "requests",
    "praw",           # For Reddit API
    "pyairtable",     # For Airtable API
    "openai",         # For OpenAI API
    "newsapi-python", # For News API
    "langchain-community"
]

[project.scripts]
getting_automated_sales_ai_agent = "getting_automated_sales_ai_agent.main:run"
run_crew = "getting_automated_sales_ai_agent.main:run"
train = "getting_automated_sales_ai_agent.main:train"
replay = "getting_automated_sales_ai_agent.main:replay"
test = "getting_automated_sales_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
